trying to make the cells squares

--- a/thesis.css
+++ b/thesis.css
@@ -1,15 +1,7 @@
 #myTable {
     width: 100%;
+    border-spacing: 5px;
 }
-td {
+#myTable td {
     border: 1px solid black;
-    padding-bottom: 33%;
-    width: 33%;
-    height: 0;
-    position: relative;
-}
-td:after {
-    content: '';
-    display: block;
-    margin-top: 100%;
 }
