--- a/thesis.css
+++ b/thesis.css
@@ -1,7 +1,18 @@
 #myTable {
-    width: 100%;
+    /*width: 100%;*/
     border-spacing: 5px;
 }
 #myTable td {
     border: 1px solid black;
+    width: 40px;
+    height: 40px;
+}
+#myTable td:hover {
+    background-color: #f5f5f5;
+}
+.aisle {
+    background-color: black;
+}
+.seat {
+
 }
