--- a/thesis.css
+++ b/thesis.css
@@ -4,15 +4,17 @@
 }
 #myTable td {
     border: 1px solid black;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
 }
 #myTable td:hover {
     background-color: #f5f5f5;
 }
 .aisle {
     background-color: black;
+    color: white;
+    text-align: center;
 }
 .seat {
-
+    text-align: center;
 }
