--- a/thesis.css
+++ b/thesis.css
@@ -4,6 +4,7 @@
 }
 #myTable td {
     border: 8px solid black;
+    text-align: center;
     width: 50px;
     height: 50px;
 }
@@ -16,4 +17,7 @@
 }
 .seat {
     text-align: center;
+}
+.activeseat {
+    border: 8px solid green;
 }
