--- a/thesis.css
+++ b/thesis.css
@@ -1,16 +1,16 @@
-#myTable {
+#classroom {
     /*width: 100%;*/
     border-spacing: 5px;
 }
-#myTable td {
+#classroom td {
     border: 8px solid black;
     text-align: center;
     width: 50px;
     height: 50px;
 }
-#myTable td:hover {
+#classroom td:hover {
     background-color: #e6e6e6;
 }
-.activeseat {
-    border: 8px solid green;
+.aisle {
+    background-color: black;
 }
