setactive and setinactive are both working, IP addresses updated

--- a/thesis.css
+++ b/thesis.css
@@ -16,7 +16,7 @@
     background-color: black;
 }
 .active {
-    background-color: #cacdce;
+    background-color: #ccffcc;
 }
 .bad {
     background-color: #ff0000;
