question entering works but doesnt add to the database yet, loop for displaying questions is in place (but doesnt query)

--- a/thesis.css
+++ b/thesis.css
@@ -9,6 +9,16 @@
 #classroom td:hover {
     /*background-color: #8f9ba3;*/
 }
+#questioncontainer {
+    border: 2px solid black;
+    clear: right;
+    margin: 10px;
+    width: 90%;
+    height: 300px; 
+}
+#inquiry {
+    border: 1px solid red;
+}
 .seat {
     background-color: #54585a;
 }
