--- a/thesis.css
+++ b/thesis.css
@@ -6,31 +6,26 @@
     width: 50px;
     height: 50px;
 }
-#classroom td:hover {
-    /*background-color: #8f9ba3;*/
-}
 #questioncontainer {
-    border: 2px solid black;
     display: table;
     clear: right;
     margin-top: 15px;
     overflow: hidden;
     width: 90%;
-    /* height: 300px;  */
 }
 #inquiry {
-    border: 1px solid red;
     display: table-row;
-     overflow: hidden; 
+    overflow: hidden; 
+    background: lightgray;
 }
 #vote {
     display: table-cell; 
     padding: 3px; 
     vertical-align: top;
-    border: 1px solid blue;
     width: 35px;
     font-size: 25px;
     font-family: Cambria;
+    color: gray;
 }
 .up .down {
      display:inline;  
@@ -43,22 +38,25 @@
     color: red;
     cursor: pointer;
 }
+.votedup .voteddown {
+    color: black;
+}
 
 #questioncontent {
     display: table-cell; 
-    border: 2px solid yellow;
     padding: 4px;
     vertical-align: middle;
 }
-#activebut {
+.activebut {
     display: table-cell; 
-    border: 1px solid green;
+    float:right;
     vertical-align: top;
     font-size: 25px;
     font-family: Arial;
+    color: gray;
     padding: 5px;
 }
-#activebut:hover {
+.activebut:hover {
     color: red;
     cursor: pointer;
 }
