Color behind arrows changes with vote, color of question is close to changing but there's something odd happening with detecting the score. IP address can be received

--- a/thesis.css
+++ b/thesis.css
@@ -43,7 +43,7 @@
     color: black;
 }
 
-#questioncontent {
+.questioncontent {
     display: table-cell; 
     padding: 4px;
     vertical-align: middle;
